# duo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  app.py  duo.ps1  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: index.html
huggingface/: README.md  app.py  requirements.txt
scripts/: export_png.py  push_to_hf.py
src/duo/: __init__.py  cli.py  commands.py  config.py  context.py  doctor.py  hooks.py  lineedit.py  mcp.py  mentions.py  openclaw.py  orchestrator.py  peers.py  server.py  session.py  skills.py  tui.py  ui.py
tests/: conftest.py  test_commands.py  test_config.py  test_doctor.py  test_hooks.py  test_mcp.py  test_mentions.py  test_openclaw.py  test_server.py  test_session.py  test_skills.py
